crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__assignment__global.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/global.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a @1 before)
   (print (local a @1))
   (expr (= a (local 1) after))
   (print (local a @1))
   (print (= a (local 1) arg))
   (print (local a @1)))

----- stderr -----
